--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -306,28 +306,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zhH-Te-dEj">
-                                <rect key="frame" x="250" y="250" width="100" height="100"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7b-83-Knc">
-                                        <rect key="frame" x="11" y="39" width="78" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="78" id="oSh-nN-rKD"/>
-                                            <constraint firstAttribute="height" constant="21" id="pOD-fw-Bh2"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
-                                        <color key="textColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="0.76376325133717504" blue="0.056163592927314432" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="LSv-6G-qhD"/>
-                                    <constraint firstItem="q7b-83-Knc" firstAttribute="centerY" secondItem="zhH-Te-dEj" secondAttribute="centerY" id="QZ5-0d-0cu"/>
-                                    <constraint firstAttribute="width" constant="100" id="S29-po-gRi"/>
-                                    <constraint firstItem="q7b-83-Knc" firstAttribute="centerX" secondItem="zhH-Te-dEj" secondAttribute="centerX" id="X5n-Ur-BPF"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbr-xL-oPs">
                                 <rect key="frame" x="519" y="28" width="61" height="30"/>
                                 <constraints>
@@ -378,26 +356,24 @@
                                     <constraint firstItem="4dd-Ca-jL1" firstAttribute="centerY" secondItem="r63-Zu-Brt" secondAttribute="centerY" id="vXQ-5F-Bct"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aF4-iV-F6a">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zhH-Te-dEj">
                                 <rect key="frame" x="480" y="250" width="100" height="100"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Other Links" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hPE-Ln-hZN">
-                                        <rect key="frame" x="7" y="39" width="85" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Contact Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7b-83-Knc">
+                                        <rect key="frame" x="11" y="39" width="78" height="21"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="85" id="LU7-qp-bfN"/>
-                                            <constraint firstAttribute="height" constant="21" id="wYQ-ug-fN4"/>
+                                            <constraint firstAttribute="width" constant="78" id="oSh-nN-rKD"/>
+                                            <constraint firstAttribute="height" constant="21" id="pOD-fw-Bh2"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                         <color key="textColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.25098039215686274" green="0.75294117647058822" blue="0.79607843137254897" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="0.76376325133717504" blue="0.056163592927314432" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="S8V-To-yeJ"/>
-                                    <constraint firstAttribute="height" constant="100" id="Sqf-xe-Z0T"/>
-                                    <constraint firstItem="hPE-Ln-hZN" firstAttribute="centerX" secondItem="aF4-iV-F6a" secondAttribute="centerX" id="ksL-F4-hab"/>
-                                    <constraint firstItem="hPE-Ln-hZN" firstAttribute="centerY" secondItem="aF4-iV-F6a" secondAttribute="centerY" id="xEf-a2-896"/>
+                                    <constraint firstAttribute="height" constant="100" id="c1h-PM-17x"/>
+                                    <constraint firstAttribute="width" constant="100" id="vIm-h8-OIA"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -411,12 +387,9 @@
                             <constraint firstItem="7br-Vt-HgC" firstAttribute="top" secondItem="4Vg-Zk-sR2" secondAttribute="bottom" constant="8" id="TI2-Y6-t6W"/>
                             <constraint firstItem="4Vg-Zk-sR2" firstAttribute="top" secondItem="vit-t4-zUB" secondAttribute="bottom" constant="30" id="UGe-n8-fhP"/>
                             <constraint firstItem="r63-Zu-Brt" firstAttribute="leading" secondItem="NJL-Ch-sva" secondAttribute="leadingMargin" id="W6y-oW-YBt"/>
-                            <constraint firstItem="zhH-Te-dEj" firstAttribute="centerY" secondItem="NJL-Ch-sva" secondAttribute="centerY" id="YRf-cV-bxj"/>
-                            <constraint firstItem="zhH-Te-dEj" firstAttribute="centerX" secondItem="NJL-Ch-sva" secondAttribute="centerX" id="cqX-XZ-P2C"/>
-                            <constraint firstItem="zhH-Te-dEj" firstAttribute="centerX" secondItem="NJL-Ch-sva" secondAttribute="centerX" id="pPQ-qj-MCQ"/>
-                            <constraint firstItem="aF4-iV-F6a" firstAttribute="centerY" secondItem="NJL-Ch-sva" secondAttribute="centerY" id="pxR-UD-i5A"/>
+                            <constraint firstItem="zhH-Te-dEj" firstAttribute="trailing" secondItem="NJL-Ch-sva" secondAttribute="trailingMargin" id="bvH-Ql-ry9"/>
+                            <constraint firstItem="zhH-Te-dEj" firstAttribute="centerY" secondItem="NJL-Ch-sva" secondAttribute="centerY" id="tqx-zB-TLi"/>
                             <constraint firstItem="tdJ-bK-maX" firstAttribute="trailing" secondItem="NJL-Ch-sva" secondAttribute="trailingMargin" id="ug3-xA-EzE"/>
-                            <constraint firstItem="aF4-iV-F6a" firstAttribute="trailing" secondItem="NJL-Ch-sva" secondAttribute="trailingMargin" id="yAI-qs-JCQ"/>
                         </constraints>
                     </view>
                     <connections>
@@ -426,7 +399,6 @@
                         <outlet property="editButton" destination="xCq-D4-7SE" id="JkI-tQ-d8j"/>
                         <outlet property="linkedInView" destination="r63-Zu-Brt" id="FzF-6C-fUG"/>
                         <outlet property="nameLabel" destination="7br-Vt-HgC" id="Jah-FP-Cab"/>
-                        <outlet property="otherLinksView" destination="aF4-iV-F6a" id="BDd-ad-ws4"/>
                         <outlet property="profileImageView" destination="4Vg-Zk-sR2" id="IkH-dd-ezi"/>
                     </connections>
                 </viewController>
