--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -491,10 +491,10 @@
             </objects>
             <point key="canvasLocation" x="1058" y="494"/>
         </scene>
-        <!--View Controller-->
+        <!--Connected Users View Controller-->
         <scene sceneID="VSC-c6-k41">
             <objects>
-                <viewController id="d6f-nJ-Bx1" sceneMemberID="viewController">
+                <viewController id="d6f-nJ-Bx1" customClass="ConnectedUsersViewController" customModule="Exchange" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cSM-n0-Cmv"/>
                         <viewControllerLayoutGuide type="bottom" id="8qa-Lp-6Lo"/>
@@ -503,13 +503,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6ye-ls-zkl">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Po-Mj-qM4">
+                                <rect key="frame" x="20" y="20" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ZC5-Po-O2w"/>
+                                    <constraint firstAttribute="width" constant="46" id="y0x-wQ-A26"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" red="0.97647058823529409" green="0.94901960784313721" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="goBack:" destination="d6f-nJ-Bx1" eventType="touchUpInside" id="LQU-8M-5UA"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="137" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="C3L-he-DNd">
+                                <rect key="frame" x="20" y="94" width="560" height="506"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileCell" rowHeight="137" id="N4g-fr-44c" customClass="ProfileCell" customModule="Exchange" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="560" height="137"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="N4g-fr-44c" id="BKs-Zg-sPF">
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="136"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x1U-HB-bgZ">
+                                                    <rect key="frame" x="8" y="13" width="110" height="110"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcl-xt-1YP">
+                                                    <rect key="frame" x="138" y="57" width="230" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" red="0.97647058823529409" green="0.96862745098039216" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.25098039215686274" green="0.75294117647058822" blue="0.79607843137254897" alpha="1" colorSpace="calibratedRGB"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageView" destination="x1U-HB-bgZ" id="Odm-Qw-U5J"/>
+                                            <outlet property="nameLabel" destination="xcl-xt-1YP" id="seg-3b-1zL"/>
+                                            <outlet property="profileImageView" destination="x1U-HB-bgZ" id="nDx-cv-U0q"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="6ye-ls-zkl">
+                                <rect key="frame" x="0.0" y="50" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="FZk-MP-SAs"/>
+                                </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="8qa-Lp-6Lo" firstAttribute="top" secondItem="C3L-he-DNd" secondAttribute="bottom" id="09J-9o-vLs"/>
+                            <constraint firstItem="C3L-he-DNd" firstAttribute="trailing" secondItem="xoJ-Ov-K2q" secondAttribute="trailingMargin" id="2MK-4B-ppG"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6ye-ls-zkl" secondAttribute="trailing" constant="-20" id="2kv-ZP-iey"/>
+                            <constraint firstItem="6ye-ls-zkl" firstAttribute="top" secondItem="2Po-Mj-qM4" secondAttribute="bottom" id="CGM-P5-8C3"/>
+                            <constraint firstItem="6ye-ls-zkl" firstAttribute="leading" secondItem="xoJ-Ov-K2q" secondAttribute="leadingMargin" constant="-20" id="YAL-rv-M1P"/>
+                            <constraint firstItem="C3L-he-DNd" firstAttribute="top" secondItem="6ye-ls-zkl" secondAttribute="bottom" id="ahf-Qj-qc2"/>
+                            <constraint firstItem="2Po-Mj-qM4" firstAttribute="leading" secondItem="xoJ-Ov-K2q" secondAttribute="leadingMargin" id="bkw-2C-Y4e"/>
+                            <constraint firstItem="2Po-Mj-qM4" firstAttribute="top" secondItem="cSM-n0-Cmv" secondAttribute="bottom" id="sCf-sd-X1f"/>
+                            <constraint firstItem="C3L-he-DNd" firstAttribute="leading" secondItem="xoJ-Ov-K2q" secondAttribute="leadingMargin" id="trA-oM-ejy"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="6ye-ls-zkl" id="eIY-pd-Yja"/>
+                        <outlet property="tableView" destination="C3L-he-DNd" id="uvn-51-Oqs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dp1-nP-Rbu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
